--- a/index.html
+++ b/index.html
@@ -35,21 +35,19 @@
               <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
+              <a class="nav-link" href="./newsfeed.html">Newsfeed</a>
+            
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Dropdown
+                Login & Register
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="./Login.html">Login</a></li>
+                <li><a class="dropdown-item" href="./Register.html">Register</a></li>
                 <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                <li><a class="dropdown-item" href="#">Logout</a></li>
               </ul>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link ">Disabled</a>
             </li>
           </ul>
           <form class="d-flex">
