--- a/Login.html
+++ b/Login.html
@@ -32,6 +32,7 @@
           <label class="form-check-label" for="exampleCheck1">Check me out</label>
         </div>
         <button type="submit" class="btn btn-primary">Login</button>
+        <a href="./Register.html" class="text-success">don't you have account?</a>
       </form>  
   
 </body>
