--- a/Register.html
+++ b/Register.html
@@ -88,6 +88,7 @@
                 <label class="form-check-label" for="exampleCheck1">Check me out</label>
             </div>
             <button type="submit" class="btn btn-outline-success">Register</button>
+            <a href="./Login.html" class="text-success">I already have an account</a>
         </form>
 
     </div>
