--- a/newsfeed.html
+++ b/newsfeed.html
@@ -70,41 +70,49 @@
     <div class="container">
         <!--first row-->
         <div class="row mt-5">
-            <div class="col-md-8 paper">
-                <h3>column-1 post-1</h3>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi qui quia unde veritatis iure ad ab
-                    fuga maiores laboriosam, minima impedit velit voluptatum excepturi. Debitis labore sed veniam saepe
-                    eveniet.
-                </p>
+            <div class="col-md-8 ">
+                <div class="card mb-3">
+                    <img src="./assets/images/column-1.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    </div>
+                  </div>
+                  </div>
+
+            <div class="col-md-3">
+                <div class="card mb-3">
+                    <img src="./assets/images/column-4 (2).jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    </div>
+                  </div>
             </div>
 
-            <div class="col-md-3  paper">
-                <h3>column-2</h3>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque accusantium rem placeat, itaque
-                    eligendi recusandae culpa possimus aut odio praesentium ut nemo suscipit dolores est officiis a
-                    voluptas ipsam doloribus!
-                </p>
+
+            <div class="col-md-8">
+                <div class="card mb-3">
+                    <img src="./assets/images/column-4 (3).jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    </div>
+                  </div>
             </div>
 
-
-            <div class="col-md-8 paper">
-                <h3>column-3 post-2</h3>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi qui quia unde veritatis iure ad ab
-                    fuga maiores laboriosam, minima impedit velit voluptatum excepturi. Debitis labore sed veniam saepe
-                    eveniet.
-                </p>
-            </div>
-
-            <div class="col-md-8 paper">
-                <h3>column-4 post-3</h3>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi qui quia unde veritatis iure ad ab
-                    fuga maiores laboriosam, minima impedit velit voluptatum excepturi. Debitis labore sed veniam saepe
-                    eveniet.
-                </p>
+            <div class="col-md-8">
+                <div class="card mb-3">
+                    <img src="./assets/images/column-4 (4).jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    </div>
+                  </div>
             </div>
             <!-- <div class="col paper">
                 <h3>column-3</h3>
@@ -120,32 +128,35 @@
 
         <!--2nd row-->
         <div class="row">
-            <div class="col paper">
-                <h3>column-4</h3>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus officia eius tempora dolorum
-                    nihil animi minus amet ratione rerum expedita! Culpa minima veritatis magnam, nostrum optio velit
-                    repudiandae vel minus.
-                </p>
+            <div class="col">
+                <div class="card text-white bg-primary mb-3" style="max-width: 18rem;">
+                    <div class="card-header">Header</div>
+                    <div class="card-body">
+                      <h5 class="card-title">Primary card title</h5>
+                      <p class="card-tex text-light">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                  </div>
             </div>
 
-            <div class="col paper">
-                <h3>column-5</h3>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus officia eius tempora dolorum
-                    nihil animi minus amet ratione rerum expedita! Culpa minima veritatis magnam, nostrum optio velit
-                    repudiandae vel minus.
-                </p>
+            <div class="col">
+                <div class="card text-white bg-success mb-3" style="max-width: 18rem;">
+                    <div class="card-header">Header</div>
+                    <div class="card-body">
+                      <h5 class="card-title">Primary card title</h5>
+                      <p class="card-text text-light">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                  </div>
             </div>
 
 
-            <div class="col paper">
-                <h3>column-6</h3>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus officia eius tempora dolorum
-                    nihil animi minus amet ratione rerum expedita! Culpa minima veritatis magnam, nostrum optio velit
-                    repudiandae vel minus.
-                </p>
+            <div class="col">
+                <div class="card text-white bg-warning mb-3" style="max-width: 18rem;">
+                    <div class="card-header">Header</div>
+                    <div class="card-body">
+                      <h5 class="card-title">Primary card title</h5>
+                      <p class="card-text text-dark">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                  </div>
             </div>
 
         </div>
